--- a/app.json
+++ b/app.json
@@ -25,8 +25,15 @@
         "backgroundColor": "#FFFFFF"
       }
     },
+    "splash": {
+      "image": "./assets/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#000000"
+    },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "description": "School project trying out React Native for the first time, so here are just mix match of things you can do with React Native"
+
   }
 }
