--- a/package.json
+++ b/package.json
@@ -8,12 +8,27 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.5.0",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.9.3",
     "expo": "~40.0.0",
+    "expo-image-picker": "~9.2.0",
+    "expo-sharing": "~8.5.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-elements": "^3.2.0",
+    "react-native-fast-image": "^8.3.4",
+    "react-native-gesture-handler": "^1.8.0",
+    "react-native-maps": "0.27.1",
+    "react-native-reanimated": "^1.13.2",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "^2.15.2",
+    "react-native-vector-icons": "^8.0.0",
+    "react-native-web": "^0.15.0",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.3"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
